Un arreglo nuevo para que se viera la imagen de arriba

--- a/PracticaListicle/estilos.css
+++ b/PracticaListicle/estilos.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-  background-image: linear-gradient(rgba(0, 0, 0, .3), rgba(0, 0, 0, .3)), url('C:/Users/Ukyo/Desktop/PracticaListicle/recursos/header.png');
+  background-image: linear-gradient(rgba(0, 0, 0, .3), rgba(0, 0, 0, .3)), url('recursos/header.png');
   background-size: cover;
   height: 500px;
   display: flex;
